# faststream-outbox

./: .gitignore  CLAUDE.md  Justfile  README.md  context7.json  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: _checks.yml  benchmarks.yml  ci.yml  release.yml
architecture/: README.md  dlq.md  drain.md  integration.md  metrics.md  producer.md  relay.md  retry.md  schema.md  subscriber.md  test-broker.md  timers.md
benchmarks/: __init__.py  __main__.py  baseline.json  config.py  probes.py  report.py  workload.py
docs/: CNAME  index.md
docs/concepts/: comparison.md  instrumentation-seams.md  performance.md
docs/introduction/: how-it-works.md  installation.md
docs/operations/: alembic.md  checklist.md  troubleshooting.md
docs/patterns/: messaging-service.md
docs/tutorials/: add-kafka-relay.md  first-outbox-app.md
docs/usage/: basic.md  dlq.md  fastapi.md  messaging-service.md  observability.md  publisher.md  relay.md  router.md  schema-validation.md  setup-prometheus-opentelemetry.md  subscriber.md  testing.md  timers.md
faststream_outbox/: __init__.py  _import_checker.py  _scheduling.py  _time.py  annotations.py  autovacuum.py  broker.py  client.py  configs.py  envelope.py  message.py  registrator.py  response.py  retry.py  router.py  schema.py  schema_validation.py  testing.py
faststream_outbox/fastapi/: __init__.py  router.py
faststream_outbox/metrics/: __init__.py  opentelemetry.py  prometheus.py
faststream_outbox/opentelemetry/: __init__.py  middleware.py  provider.py
faststream_outbox/parser/: parser.py
faststream_outbox/prometheus/: __init__.py  middleware.py  provider.py
faststream_outbox/publisher/: config.py  factory.py  fake.py  producer.py  specification.py  usecase.py
faststream_outbox/subscriber/: config.py  factory.py  usecase.py
planning/: README.md  deferred-work.md  deferred.md  index.py  lint-suppressions.md
planning/_templates/: change.md  design.md  plan.md
planning/active/: 2026-06-10-docs-landing-and-comparison-design.md  2026-06-10-docs-landing-and-comparison-plan.md  2026-06-10-planning-conventions-design.md  2026-06-11-docs-tutorials-and-observability-split-design.md  2026-06-11-docs-tutorials-and-observability-split-plan.md  2026-06-11-operator-pages-design.md  2026-06-11-operator-pages-plan.md  2026-06-12-code-audit-findings.md  2026-06-12-docs-audit-findings.md  2026-06-12-docs-tutorials-design.md  2026-06-12-docs-tutorials-plan.md  2026-06-13-portable-planning-convention-design.md  2026-06-13-portable-planning-convention-plan.md
planning/architecture/: dlq.md  relay.md
planning/archived/: 2026-06-03-all-extra-and-planning-dir-design.md  2026-06-03-faststream-0.7-migration-design.md  2026-06-03-faststream-0.7-migration-plan.md  2026-06-04-faststream-0.7.1-testbroker-typing-plan.md  2026-06-04-foreign-broker-relay-plan.md  2026-06-09-drain-test-flaky-fetch-observation-plan.md  2026-06-10-planning-conventions-design.md  2026-06-11-docs-tutorials-and-observability-split-design.md  2026-06-11-docs-tutorials-and-observability-split-plan.md  2026-06-11-operator-pages-design.md  2026-06-12-code-audit-findings.md  2026-06-12-docs-tutorials-design.md
planning/audits/: 2026-06-12-code-audit-findings.md  2026-06-12-docs-audit-findings.md  2026-06-13-docs-audit-findings.md  2026-06-14-deep-audit-findings.md  2026-06-14-deep-audit-pass2-findings.md  2026-06-14-deep-audit-pass3-findings.md
planning/changes/: 2026-06-03.01-all-extra-and-planning-dir.md  2026-06-04.01-faststream-0.7.1-testbroker-typing.md  2026-06-10.01-planning-conventions.md  2026-06-10.02-docs-landing-and-comparison.md  2026-06-11.01-operator-pages.md  2026-06-11.02-docs-tutorials-and-observability-split.md  2026-06-13.01-portable-planning-convention.md  2026-06-19.01-messaging-service-patterns-doc.md  2026-06-19.02-docs-diataxis-nav.md  2026-06-20.01-flat-changes-generated-index.md  2026-06-23.01-client-rules-kernel.md  2026-06-23.02-consolidate-lease-lost.md  2026-06-23.03-self-validating-subscriber-config.md  2026-07-14.01-benchmark-harness.md  2026-07-15.01-batched-terminal-flush.md  2026-07-15.02-autovacuum-tuning.md  2026-07-16.01-autovacuum-cost-knobs.md  2026-07-16.02-notify-dedup.md  2026-07-16.03-performance-docs-page.md  2026-07-16.04-split-schema-validator.md  2026-07-17.01-table-ops-behind-client-seam.md  2026-07-17.02-outcome-sum-type.md  2026-07-17.03-benchmark-pr-comment.md  2026-07-17.04-benchmarks-cli-subparsers.md  2026-07-18.01-free-threaded-support.md
planning/decisions/: 2026-06-23-metrics-recorders-not-unified.md  2026-07-05-no-doc-code-fence-validation.md  2026-07-17-conn-union-is-deliberate.md  2026-07-18-free-threading-is-compat-only.md  2026-07-18-sqlalchemy-cyext-disables-gil.md
planning/plans/: 2026-06-03-all-extra-and-planning-dir-plan.md  2026-06-03-faststream-0.7-migration-plan.md  2026-06-09-drain-test-flaky-fetch-observation-plan.md  2026-06-09-mkdocs-github-pages-plan.md
planning/releases/: 0.10.0.md  0.10.1.md  0.10.2.md  0.10.3.md  0.10.4.md  0.10.5.md  0.11.0.md  0.12.0.md  0.13.0.md  0.9.0.md  0.9.1.md  README.md
planning/specs/: 2026-06-03-all-extra-and-planning-dir-design.md  (+5 more)
tests/: conftest.py  test_benchmarks.py  test_client_contract.py  test_fake.py  test_fastapi.py  test_integration.py  test_metrics_opentelemetry.py  test_metrics_prometheus.py  test_middleware_opentelemetry.py  test_middleware_prometheus.py  test_planning_index.py  test_relay.py  test_unit.py
(+63 files in other folders)
