[project]
name = "faststream-outbox"
version = "0"
description = "FastStream broker integration for the transactional outbox pattern: a Postgres table is the queue"
authors = [
    { name = "Artur Shiriev", email = "me@shiriev.ru" },
]
readme = "README.md"
requires-python = ">=3.13,<4"
license = "MIT"
dependencies = [
    "faststream~=0.6",
    "sqlalchemy[asyncio]>=2.0",
]

[project.optional-dependencies]
asyncpg = ["asyncpg>=0.29"]
validate = ["alembic>=1.13"]
fastapi = ["fastapi>=0.95"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "fastapi>=0.95",
    "httpx>=0.27",
]
lint = [
    "ruff",
    "ty",
    "eof-fixer",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "faststream_outbox"
module-root = ""

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1", # allow missing docstrings
    "FBT", # allow boolean args
    "TRY003", # allow long exception messages
    "EM102", # allow f-string for exception message
    "D203", # "one-blank-line-before-class" conflicting with D211
    "D212", # "multi-line-summary-second-line" conflicting with D213
    "COM812", # flake8-commas "Trailing comma missing"
    "ISC001", # flake8-implicit-str-concat
    "G004", # Logging statement uses f-string
    "ANN",
]
isort.lines-after-imports = 2
isort.no-lines-before = ["standard-library", "local-folder"]

[tool.ruff.lint.pylint]
# FastStream broker/subscriber/publisher kwargs ladders are wide by design;
# raise PLR0913 (too-many-arguments) so the common 10–14 arg factories don't
# need per-site `# noqa` comments. Outliers (e.g. FastAPI router constructor
# at ~32 args) carry a localized `# noqa: PLR0913`.
max-args = 15

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = [
    "S101", # allow asserts
    "PLR2004", # allow magic values
]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report term-missing"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.report]
exclude_also = ["if typing.TYPE_CHECKING:"]
