[project]
name = "faststream-outbox"
version = "0"
description = "FastStream transactional-outbox integration backed by a Postgres table"
authors = [
    { name = "Artur Shiriev", email = "me@shiriev.ru" },
]
readme = "README.md"
requires-python = ">=3.13,<4"
license = "MIT"
keywords = ["faststream", "outbox", "transactional-outbox", "postgresql", "messaging", "asyncio", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "faststream>=0.7.1,<0.8",
    "sqlalchemy[asyncio]>=2.0",
]

[project.optional-dependencies]
asyncpg = ["asyncpg>=0.29"]
validate = ["alembic>=1.13"]
fastapi = ["fastapi>=0.95"]
prometheus = ["prometheus-client>=0.19"]
opentelemetry = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]
all = ["faststream-outbox[asyncpg,validate,fastapi,prometheus,opentelemetry]"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "fastapi>=0.95",
    "faststream[kafka]>=0.7.1,<0.8",
    "httpx2>=2.2",
    "prometheus-client>=0.19",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
lint = [
    "ruff",
    "ty",
    "eof-fixer",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "faststream_outbox"
module-root = ""

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1", # allow missing docstrings
    "FBT", # allow boolean args
    "TRY003", # allow long exception messages
    "EM102", # allow f-string for exception message
    "D203", # "one-blank-line-before-class" conflicting with D211
    "D212", # "multi-line-summary-second-line" conflicting with D213
    "COM812", # flake8-commas "Trailing comma missing"
    "ISC001", # flake8-implicit-str-concat
    "G004", # Logging statement uses f-string
    "ANN",
]
isort.lines-after-imports = 2
isort.no-lines-before = ["standard-library", "local-folder"]

[tool.ruff.lint.pylint]
# FastStream broker/subscriber/publisher kwargs ladders are wide by design;
# raise PLR0913 (too-many-arguments) so the common 10–14 arg factories don't
# need per-site `# noqa` comments. Outliers (e.g. FastAPI router constructor
# at ~32 args) carry a localized `# noqa: PLR0913`.
max-args = 15

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = [
    "S101", # allow asserts
    "PLR2004", # allow magic values
]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report term-missing --cov-fail-under=100"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[project.urls]
Homepage = "https://modern-python.org"
Repository = "https://github.com/modern-python/faststream-outbox"
Issues = "https://github.com/modern-python/faststream-outbox/issues"
Changelog = "https://github.com/modern-python/faststream-outbox/releases"

[tool.coverage.report]
exclude_also = ["if typing.TYPE_CHECKING:"]
